# token_optimizer_library

./: history.md  package-lock.json  package.json  project_review_ver01.html
docs/: Prompt_Clip_App_Plan.md  Prompt_Clip_Code_Implementation_Plan.md  Prompt_Clip_Code_Plan.md  Prompt_Clip_Development_Plan.md  research.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/llm/: mod.rs  prompt.rs
src-tauri/src/ocr/: macos.rs  mod.rs  windows.rs
src-tauri/src/parser/: docx.rs  mod.rs  pdf.rs
src/components/: FileDropZone.tsx  SearchInput.tsx  StatusBar.tsx
src/services/: presetManager.ts  tauriIpc.ts
